--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 	<script type="text/javascript" src="index_files/framecount.js"></script>
 	<script type="text/javascript" src="index_files/main.js"></script>
 
-<script src="index_files/google-analytics_ga.js" async="true"></script><script type="text/javascript" src="index_files/image.php"></script></head>
+<script type="text/javascript" src="index_files/image.php"></script></head>
 <body>
 
 	<div id="container" style="display: block; left: 319px; top: 353px;">
