Don't call processImage before loading

--- a/index.htm
+++ b/index.htm
@@ -17,8 +17,7 @@
 	<script type="text/javascript" src="index_files/tween.js"></script>
 	<script type="text/javascript" src="index_files/framecount.js"></script>
 	<script type="text/javascript" src="index_files/main.js"></script>
-
-<script type="text/javascript" src="index_files/image.php"></script></head>
+</head>
 <body>
 
 	<div id="container" style="display: block; left: 319px; top: 353px;">
