Remove Stylus-injected CSS

--- a/index.htm
+++ b/index.htm
@@ -112,33 +112,4 @@
 
 
 
-</body><style id="stylus-262" type="text/css" class="stylus">#hot-network-questions {
-    display: none !important;
-}</style><style id="stylus-300" type="text/css" class="stylus">html {
-    text-decoration-skip-ink: none;
-/*     scrollbar-color: #9af #f0f0f0; */
-}
-* {
-	letter-spacing: 0 !important;
-    hyphens: manual !important;
-}
-/* :root {
-	scrollbar-color: #aaa #f0f0f0;
-} */
-html, body {
-    font-weight: 400 !important;
-/*     font-family: sans-serif; */
-}</style><style id="stylus-400" type="text/css" class="stylus">#container {
-    left: 0px !important;
-    top: 0px !important;
-  }
-  #palette_display {
-    width: 176px;
-    width: calc(11px * 12);
-  }
-  #d_footer {
-    display: none;
-  }
-  #d_header {
-    display: none !important;
-  }</style></html>
+</body></html>
